Cuestionario 9: Código 21 abril

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,14 @@
 /clases/ConceptosBasicos/build/
 diagramaBD.img
 /clases/ConceptosBasicos/dist/
+/tareas/TareaLibro/nbproject/private/
+/tareas/TareaLibro/build/
+/clases/ejemploRepaso/nbproject/private/
+/clases/ejemploRepaso/build/
+/clases/ReutilizacionCodigo2209/nbproject/private/
+/clases/ReutilizacionCodigo2209/build/
+/clases/ReutilizacionCodigo2209/dist/
+/clases/TareaLyP/nbproject/private/
+/clases/TareaLyP/build/
+/clases/JavaBasico2209/nbproject/private/
+/clases/JavaBasico2209/build/
