--- a/clases/JavaBasico2209/nbproject/project.properties
+++ b/clases/JavaBasico2209/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=ReutilizacionCodigo2209
+application.title=JavaBasico2209
 application.vendor=calav
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ReutilizacionCodigo2209.jar
+dist.jar=${dist.dir}/JavaBasico2209.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/ReutilizacionCodigo2209
+dist.jlink.output=${dist.jlink.dir}/JavaBasico2209
 endorsed.classpath=
 excludes=
 includes=**
@@ -46,8 +46,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=18
+javac.target=18
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -72,12 +72,12 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=ReutilizacionCodigo2209
-main.class=reutilizacioncodigo2209.PruebaPolimorfismo
+jlink.launcher.name=JavaBasico2209
+main.class=javabasico2209.JavaBasico2209
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_18
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
